--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@agm/core": "^1.0.0-beta.6",
     "@angular-material-extensions/google-maps-autocomplete": "^1.6.1",
     "@angular/animations": "^8.0.2",
-    "@angular/cdk": "^8.0.1",
+    "@angular/cdk": "^8.1.4",
     "@angular/common": "^8.0.0",
     "@angular/compiler": "^8.0.0",
     "@angular/core": "^8.0.0",
@@ -23,24 +23,37 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "@ks89/angular-modal-gallery": "^7.2.4",
+    "@progress/kendo-angular-common": "^1.1.0",
+    "@progress/kendo-angular-pdf-export": "^2.0.0",
+    "@progress/kendo-drawing": "^1.5.12",
+    "@progress/kendo-theme-default": "latest",
     "@stackblitz/sdk": "^1.3.0",
+    "add": "^2.0.6",
     "angular-archwizard": "^5.0.0",
+    "angular-super-gallery": "^2.0.8",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-rc.3",
     "http-proxy-middleware": "^0.19.1",
+    "mousetrap": "^1.6.3",
+    "ng-image-gallery": "^2.1.4",
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.3.0",
     "ngx-google-places-autocomplete": "^2.0.4",
+    "ngx-image-gallery": "^1.3.1",
     "ngx-spinner": "^7.1.4",
     "ngx-timeago": "^1.0.1",
+    "or": "^0.2.0",
     "rxjs": "~6.5.2",
     "rxjs-compat": "^6.5.2",
     "time-ago-pipe": "^1.3.2",
     "timeago": "^1.6.7",
     "timeago.js": "^4.0.0-beta.2",
     "tslib": "^1.9.0",
+    "yarn": "^1.17.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -50,8 +63,10 @@
     "@angular/language-service": "^8.0.0",
     "@fortawesome/fontawesome-free": "^5.9.0",
     "@types/googlemaps": "^3.36.5",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/mousetrap": "^1.6.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
