--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "@hallysonh/ngx-imageviewer": "^2.0.4",
     "@ks89/angular-modal-gallery": "^7.2.4",
+    "@ngx-gallery/core": "^3.3.1",
+    "@ngx-gallery/gallerize": "^3.3.1",
+    "@ngx-gallery/lightbox": "^3.3.1",
     "@progress/kendo-angular-common": "^1.1.0",
     "@progress/kendo-angular-pdf-export": "^2.0.0",
     "@progress/kendo-drawing": "^1.5.12",
@@ -42,6 +46,7 @@
     "ng-image-gallery": "^2.1.4",
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.3.0",
+    "ngx-gallery": "git://github.com/onack/ngx-gallery-dist",
     "ngx-google-places-autocomplete": "^2.0.4",
     "ngx-image-gallery": "^1.3.1",
     "ngx-spinner": "^7.1.4",
