--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "ng-image-gallery": "^2.1.4",
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.3.0",
-    "ngx-gallery": "git://github.com/onack/ngx-gallery-dist",
+    "ngx-gallery": "git://github.com/onack/ngx-gallery-dist.git",
     "ngx-google-places-autocomplete": "^2.0.4",
     "ngx-image-gallery": "^1.3.1",
     "ngx-spinner": "^7.1.4",
@@ -67,7 +67,7 @@
     "@angular/compiler-cli": "^8.0.0",
     "@angular/language-service": "^8.0.0",
     "@fortawesome/fontawesome-free": "^5.9.0",
-    "@types/googlemaps": "^3.36.5",
+    "@types/googlemaps": "^3.37.6",
     "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
