--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@progress/kendo-drawing": "^1.5.12",
     "@progress/kendo-theme-default": "latest",
     "@stackblitz/sdk": "^1.3.0",
+    "@types/jquery": "^3.3.31",
     "add": "^2.0.6",
     "angular-archwizard": "^5.0.0",
     "angular-super-gallery": "^2.0.8",
@@ -42,9 +43,11 @@
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-rc.3",
     "http-proxy-middleware": "^0.19.1",
+    "jquery": "^3.4.1",
     "mousetrap": "^1.6.3",
     "ng-image-gallery": "^2.1.4",
     "ng2-file-upload": "^1.3.0",
+    "ng2-input-autocomplete": "^1.1.2",
     "ngx-bootstrap": "^3.3.0",
     "ngx-gallery": "git://github.com/onack/ngx-gallery-dist.git",
     "ngx-google-places-autocomplete": "^2.0.4",
