--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jquery": "^3.3.31",
     "add": "^2.0.6",
     "angular-archwizard": "^5.0.0",
+    "angular-ng-autocomplete": "^1.1.14",
     "angular-super-gallery": "^2.0.8",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
