--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "angular-super-gallery": "^2.0.8",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "dom-to-image": "^2.6.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-rc.3",
     "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.4.1",
+    "jspdf": "^1.5.3",
     "mousetrap": "^1.6.3",
     "ng-image-gallery": "^2.1.4",
     "ng2-file-upload": "^1.3.0",
